UtahLiveDataTest/src/objects/SpendPlan__c.object
<CustomObject>
    <description>[Business]  Spend Plan is how the dollars are spend. Is it Sub Award,Internal Spend, ISA and Contracts.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>SpendPercent__c  *  Grant__r.TotalObligatedAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <label>Grant</label>
        <referenceTo>Grant__c</referenceTo>
        <relationshipLabel>Spend Plans</relationshipLabel>
        <relationshipName>Spend_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HideGrantEditDelete__c</fullName>
        <formula>Grant__r.GranteeHideEditAndDelete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideGrantEditDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpendPercent__c</fullName>
        <description>How much Percentage of money you want to spend in your sub grants from your federal grant.</description>
        <label>Spend %</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SpendType__c</fullName>
        <label>Spend Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sub Awards</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Internal Spend</fullName>
                </value>
                <value>
                    <fullName>ISA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Spend Plan</label>
    <nameField>
        <displayFormat>SPLN-{0000}</displayFormat>
        <label>Spend Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spend Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>